# mealplanner

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Family_Meal_Planner_Spec.md  MVP_CHECKLIST.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
apps/: __init__.py
apps/planning/: admin.py  forms.py  models.py  urls.py  views.py
apps/planning/migrations/: 0001_initial.py  0002_remove_unique_meal_constraint.py
apps/planning/templates/planning/: calendar.html  meal_add.html  meal_delete.html  meal_edit.html
apps/planning/templatetags/: planning_tags.py
apps/recipes/: admin.py  forms.py  models.py  urls.py  views.py
apps/recipes/migrations/: 0001_initial.py  0002_change_category_to_categories.py  0003_replace_category_with_cuisine_protein_dishtype.py  0004_populate_ingredient_categories.py
apps/recipes/services/: __init__.py  ingredient_matcher.py  recipe_import.py  text_parser.py
apps/recipes/templatetags/: markdown_tags.py  unit_tags.py
apps/shopping/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/shopping/migrations/: 0001_initial.py
apps/stats/: apps.py  services.py  urls.py  views.py
apps/users/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: middleware.py  settings.py  urls.py
nginx/: nginx.conf
scripts/: generate_icons.py
static/: manifest.json  sw.js
static/css/: input.css
templates/: base.html
(+54 files in other folders)
